# Spoons-and-Forks

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  release.ps1  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AuthModal.tsx  Header.tsx  HistoryModal.tsx  LogInput.tsx  MacroDashboard.tsx  PullToRefresh.tsx  SettingsModal.tsx  TodaysLog.tsx
src/hooks/: useFoodLog.ts  useSettings.ts
src/lib/: ai.ts  dayLogic.ts  db.ts  defaults.ts  platform.ts  supabaseClient.ts
